{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 91,
  "lineage": "fac25d7f-1bc0-d1ce-d41d-586301bf42cf",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfrg3_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkInterfaces/tfrg3nic",
            "internal_domain_name_suffix": "merr5vbsbekunc5vbcezulweqf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/publicIPAddresses/tfrg3nic-public-ip",
                "subnet_id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/virtualNetworks/tfrg3vnet/subnets/tfrg3subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "tfrg3nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "tfrg3"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.public_ip",
            "module.network.azurerm_resource_group.module_rg",
            "module.network.azurerm_subnet.module_subnet",
            "module.network.azurerm_virtual_network.module_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "module_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkInterfaces/tfrg3nic|/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkSecurityGroups/tfrg3-nsg",
            "network_interface_id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkInterfaces/tfrg3nic",
            "network_security_group_id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkSecurityGroups/tfrg3-nsg"
          },
          "dependencies": [
            "module.network.azurerm_network_interface.tfrg3_nic",
            "module.network.azurerm_network_security_group.tfrg3_nsg",
            "module.network.azurerm_public_ip.public_ip",
            "module.network.azurerm_resource_group.module_rg",
            "module.network.azurerm_subnet.module_subnet",
            "module.network.azurerm_virtual_network.module_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfrg3_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkSecurityGroups/tfrg3-nsg",
            "location": "centralindia",
            "name": "tfrg3-nsg",
            "resource_group_name": "tfrg3",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/networkSecurityGroups/tfrg3-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "tfrg3-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "tfrg3",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.tfrg3_nsg",
            "module.network.azurerm_resource_group.module_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/publicIPAddresses/tfrg3nic-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.190.132",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "tfrg3nic-public-ip",
            "resource_group_name": "tfrg3",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.module_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "module_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/virtualNetworks/tfrg3vnet/subnets/tfrg3subnet",
            "name": "tfrg3subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tfrg3",
            "virtual_network_name": "tfrg3vnet"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.module_rg",
            "module.network.azurerm_virtual_network.module_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "module_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d41f2361-0932-4615-8bf5-08899a2ec485",
            "id": "/subscriptions/ed8a2935-a70e-4e89-be56-c1efb9bd4e7e/resourceGroups/tfrg3/providers/Microsoft.Network/virtualNetworks/tfrg3vnet",
            "location": "centralindia",
            "name": "tfrg3vnet",
            "resource_group_name": "tfrg3"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.module_rg"
          ]
        }
      ]
    }
  ]
}